# ruddy

./: .gitignore  README.md  pyproject.toml
src/ruddy/: __init__.py  constants.py  logging.py  settings.py  url.py
src/ruddy/client/: __init__.py  client.py
src/ruddy/client/middleware/: __init__.py  core_middleware.py
src/ruddy/models/: endpoint_wrapper.py  table.py  ticket_wrapper.py
src/ruddy/server/: server.py
src/ruddy/server/backend/: __init__.py  duckdb.py
src/ruddy/server/middleware/: __init__.py  core_middleware.py
src/tests/: test_url.py
