[project]
authors = [
  {name = "Ceyhun Kerti", email = "ceyhun.kerti@gmail.com"},
]
dependencies = [
    "pyarrow>=16.1.0",
    "yarl>=1.9.4",
    "pytest>=8.2.2",
    "duckdb>=1.0.0",
    "pydantic>=2.8.2",
    "pydash>=8.0.1",
    "pydantic-settings>=2.3.4",
]
description = "Add your description here"
name = "ruddy"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = [
    "pyarrow-stubs>=10.0.1.7",
]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ruddy"]
